--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.2",
     "emailjs-com": "^3.2.0",
+    "express-rate-limit": "^8.1.0",
     "mongodb": "^6.20.0",
+    "mysql2": "^3.15.1",
+    "nodemailer": "^7.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
